--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,10 +1,10 @@
 ---
-import { SHORT_TITLE, SITE_DESCRIPTION, FACEBOOK, TWITTER, INSTAGRAM, LINKEDIN, GITHUB, FULL_TITLE } from '@consts/consts';
+import { SHORT_TITLE } from '@consts/consts';
 import { Icon } from '@nodes/astro-icon/components';
 
 import Menu from '@comps/menu.astro';
 ---
-<div class="navbar bg-gradient-to-r from-primary/50 to-secondary/80 backdrop-blur-sm fixed left-0 right-0 mx-auto duration-500">
+<div class="z-[999] navbar bg-gradient-to-r from-primary/50 to-secondary/80 backdrop-blur-sm fixed left-0 right-0 mx-auto duration-500">
     <div class="navbar-start">
       <div class="dropdown">
         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
