--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,7 +1,7 @@
 ---
 import { NAME } from '@consts/consts';
+import Name from '@comps/name.jsx'
 ---
-
 <section class="flex flex-col justify-center items-center h-screen py-96">
-    <h1 class="text-6xl md:text-7xl lg:text-8xl xl:text-9xl font-outfit font-bold stroke-text text-primary">{NAME}</h1>
+   <Name /> 
 </section>
