--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,31 +1,50 @@
 ---
-import { SHORT_TITLE } from '@consts/consts';
-import { Icon } from '@nodes/astro-icon/components';
-
-import Menu from '@comps/menu.astro';
+import { SHORT_TITLE } from "@consts/consts";
+import { Icon } from "astro-icon/components";
+import Resume from "@comps/core/resume.jsx";
+import Menu from "@comps/menu.astro";
 ---
-<div class="z-[999] navbar bg-gradient-to-r from-primary/50 to-secondary/80 backdrop-blur-sm fixed left-0 right-0 mx-auto duration-500">
+
+<div
+    class="z-[999] navbar bg-gradient-to-r from-primary/50 to-secondary/80 backdrop-blur-sm fixed left-0 right-0 mx-auto duration-500"
+>
     <div class="navbar-start">
-      <div class="dropdown">
-        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
+        <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-5 w-5"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                >
+                    <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M4 6h16M4 12h8m-8 6h16"></path>
+                </svg>
+            </div>
+            <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+            >
+                <Menu />
+            </ul>
         </div>
-        <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-          <Menu />
-        </ul>
-      </div>
-      <h3 class="ms-4 text-2xl font-outfit font-bold stroke-text text-base-100">{SHORT_TITLE}</h3>
+        <h3
+            class="ms-4 text-2xl font-outfit font-bold stroke-text text-base-100"
+        >
+            {SHORT_TITLE}
+        </h3>
     </div>
     <div class="navbar-center hidden lg:flex">
-      <ul class="menu menu-horizontal px-1 [&>li]:mx-2">
-          <Menu />
-      </ul>
+        <ul class="menu menu-horizontal px-1 [&>li]:mx-2">
+            <Menu />
+        </ul>
     </div>
     <div class="navbar-end me-4">
-      <a class="btn bg-base-100 border-2 border-secondary text-primary hover:bg-secondary hover:text-base-100 hover:border-primary transition duration-500 ">
-        Download CV
-        <Icon name="downloadloop" class="w-6 h-auto" />
-    </a>
+        <Resume client:load />
     </div>
 </div>
 
@@ -35,21 +54,30 @@ import Menu from '@comps/menu.astro';
         -webkit-text-fill-color: transparent;
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: var(--tw-text-primary);
-  }
+    }
+
+    .unselectable {
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
 </style>
 
 <script>
     const updateNavbarStyle = () => {
-        const navbar = document.querySelector('.navbar');
+        const navbar = document.querySelector(".navbar");
         if (navbar) {
             if (window.scrollY > 50) {
-                navbar.classList.add('w-[98%]', 'rounded-full', 'mt-4');
+                navbar.classList.add("w-[98%]", "rounded-full", "mt-4");
             } else {
-                navbar.classList.remove('w-[98%]', 'rounded-full', 'mt-4');
+                navbar.classList.remove("w-[98%]", "rounded-full", "mt-4");
             }
         }
     };
 
-    window.addEventListener('scroll', updateNavbarStyle);
+    window.addEventListener("scroll", updateNavbarStyle);
     updateNavbarStyle(); // Initial check in case the page is loaded in the middle
 </script>
