--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,12 +2,13 @@
 import Head from "@comps/head.astro"
 import Header from "@comps/header.astro"
 import Footer from "@comps/footer.astro"
+import Mcan from '@comps/mcan.tsx';
 ---
-
 <!doctype html>
 <html lang="en">
 	<Head />
 	<body class="bg-base-100">
+		<Mcan client:load />
 		<Header />
 		<slot />
 		<Footer />
