--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -1,8 +1,8 @@
 ---
 import HeaderLink from '@comps/links.astro';
 ---
-<HeaderLink href="/">Home</HeaderLink>
-<HeaderLink href="/blog">Blog</HeaderLink>
-<HeaderLink href="/about">About Me</HeaderLink>
-<HeaderLink href="/projects">My Projects</HeaderLink>
-<HeaderLink href="/contact">Contact Me</HeaderLink>
+<HeaderLink name="This Link Goes To Home Page" href="/">Home</HeaderLink>
+<HeaderLink name="This Link Goes To Blog Page" href="/blog">Blog</HeaderLink>
+<HeaderLink name="This Link Goes To About Me Page" href="/about">About Me</HeaderLink>
+<HeaderLink name="This Link Goes To Projects Page" href="/projects">My Projects</HeaderLink>
+<HeaderLink name="This Link Goes To Contact Page" href="/contact">Contact Me</HeaderLink>
