--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,10 +3,11 @@ import Head from "@comps/head.astro"
 import Header from "@comps/header.astro"
 import Footer from "@comps/footer.astro"
 import Mcan from '@comps/mcan.tsx';
+import { NAME } from '@consts/consts';
 ---
 <!doctype html>
-<html lang="en">
-	<Head />
+<html lang="en" class="overflow-x-hidden">
+	<Head sitetitle={NAME} />
 	<body class="bg-base-100">
 		<Mcan client:load />
 		<Header />
