--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Layout from '@layouts/Layout.astro';
 import Hero from '@comps/hero.astro';
+import WhatIDo from '@comps/whatido.astro';
+import RecentProjects from '@/components/recentSection.astro';
 ---
 
 <Layout>
 	<Hero />
-    <Hero />
-    <Hero />
+    <WhatIDo />
+    <RecentProjects />
 </Layout>
