--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -1,5 +1,7 @@
 ---
-import { NAME } from '@consts/consts';
+import { ViewTransitions } from 'astro:transitions';
+const { sitetitle } = Astro.props;
+import 'aos/dist/aos.css';
 ---
 <head>    
     <meta charset="UTF-8" />
@@ -8,6 +10,28 @@ import { NAME } from '@consts/consts';
     <meta name="generator" content={Astro.generator} />
     <slot />
     <title>
-        {NAME}
+        {sitetitle}
     </title>
 </head>
+<ViewTransitions />
+
+<style is:global>
+    @tailwind base;
+    @tailwind components;
+    @tailwind utilities;
+    .stroke-text {
+        --tw-text-opacity: 1;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: var(--tw-text-primary);
+    }
+
+    .unselectable {
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+</style>
