--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,11 +1,10 @@
 ---
-import { NAME } from '@consts/consts';
 import Name from '@comps/name.jsx'
-import { Image } from 'astro:assets';
-
+import { Image } from 'astro:assets'
+import { NAME } from '@consts/consts';
 import Me from '@assets/me.png';
 ---
-<section class="flex flex-col justify-center items-center h-screen py-96 relative">
-   <Name client:load /> 
-   <Image src={Me} alt={NAME} class="absolute top-24 mx-auto w-96 bg-gradient-to-b from-primary/70 to-secondary/60 h-auto rounded-full mt-12 backdrop-blur-[2px]" />
+<section class='relative h-[500] flex w-full pt-52 pb-32 justify-center items-center'>
+    <Image loading="eager" src={Me} alt={"Me, " + NAME} class="absolute z-10 w-44 md:w-96 bg-gradient-to-b from-primary/70 to-secondary/60 h-auto rounded-full backdrop-blur-[2px]"  transition:name='me'/>
+    <Name client:load  transition:name='name' /> 
 </section>
