--- a/src/components/links.astro
+++ b/src/components/links.astro
@@ -3,14 +3,16 @@ import type { HTMLAttributes } from 'astro/types';
 
 type Props = HTMLAttributes<'a'>;
 
-const { href, class: className, ...props } = Astro.props;
+const { href, name, class: className, ...props } = Astro.props;
 const pathname = Astro.url.pathname.replace(import.meta.env.BASE_URL, '');
 const subpath = pathname.match(/[^\/]+/g);
 const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
 ---
-<li><a href={href} class:list={["hover:bg-primary/20 font-bold text-primary hover:text-white", { active: isActive }]} {...props}>
-    <slot />
-</a></li>
+<li>
+    <a href={href} aria-label={name} class:list={["hover:bg-primary/20 font-bold text-primary hover:text-white", { active: isActive }]} {...props}>
+        <slot />
+    </a>
+</li>
 <style>
 	a.active {
         color: var(--tw-text-white);
