--- a/src/components/whatido.astro
+++ b/src/components/whatido.astro
@@ -12,7 +12,7 @@ import { Icon } from '@nodes/astro-icon/components';
         <h2 data-aos="fade-right" data-aos-duration="1100" class="font-outfit font-bold text-4xl md:text-5xl lg:text-6xl text-neutral mt-2">What I <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Do</span></h2>
         <div class="flex flex-col self-center py-24" data-aos="fade-right" data-aos-duration="1200">
             <Image src={car} alt="Cat Image From Freepik" class="w-3/4" />
-            <p class="text-primary capitalize mt-3 text-md font-bold flex flex-row justify-center items-center">I love cats <Icon name="heart" class="text-secondary w-6 h-auto" /></p>
+            <p class="text-primary capitalize mt-3 text-md font-bold flex flex-row justify-center items-center">I love cats btw<Icon name="heart" class="text-secondary w-6 h-auto" /></p>
         </div>
     </div>
     <div class="col-span-5 flex flex-col gap-3">
