--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -8,6 +8,7 @@ import 'aos/dist/aos.css';
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <meta name=description content={Astro.generator} />
     <slot />
     <title>
         {sitetitle}
