--- a/src/components/recentSection.astro
+++ b/src/components/recentSection.astro
@@ -3,10 +3,11 @@ import RecentCard from '@comps/recentCard.astro'
 import { getCollection } from 'astro:content';
 const allPosts = await getCollection("projects");
 ---
-<section class="flex flex-col w-[96%] h-fit my-32 bg-gray-400 mx-auto rounded-2xl p-12 shadow-[inset_2px_2px_70px] shadow-secondary/60 border-2 border-secondary">
+<section class="flex flex-col w-[96%] h-fit my-12 bg-gray-400 mx-auto rounded-2xl p-12 shadow-[inset_2px_2px_70px] shadow-secondary/60 border-2 border-secondary">
     <h2 class="font-outfit font-bold text-4xl md:text-5xl lg:text-6xl text-white mt-2">Recent <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Projects</span></h2>
     <p class="text-primary">Here are the most recent projects that I have been working on.</p>
     <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
         {allPosts.sort((a, b) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()).map((p: any) => <RecentCard post={p}/>)}
     </div>
+    <a href="/projects" class="mx-auto font-bold mt-8 text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 border border-gray-100 rounded-full hover:bg-gradient-to-tr transition-all duration-500" data-aos="fade-up" data-aos-duration="1500">View All</a>
 </section>
