--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -2,7 +2,7 @@
 import HeaderLink from '@comps/links.astro';
 ---
 <HeaderLink name="This Link Goes To Home Page" href="/">Home</HeaderLink>
-<HeaderLink name="This Link Goes To Blog Page" href="/blog">Blog</HeaderLink>
+<!-- <HeaderLink name="This Link Goes To Blog Page" href="/blog">Blog</HeaderLink> -->
 <HeaderLink name="This Link Goes To About Me Page" href="/about">About Me</HeaderLink>
 <HeaderLink name="This Link Goes To Projects Page" href="/projects">My Projects</HeaderLink>
-<HeaderLink name="This Link Goes To Contact Page" href="/contact">Contact Me</HeaderLink>
+<!-- <HeaderLink name="This Link Goes To Contact Page" href="/contact">Contact Me</HeaderLink> -->
