--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,9 +2,11 @@
 import Layout from '@layouts/Layout.astro';
 import AboutMe from '@/components/aboutme.astro';
 import WhatIDo from '@comps/whatido.astro';
+import Timelist from '@/components/timelist.astro';
 ---
 
 <Layout>
     <AboutMe />
     <WhatIDo />
+    <Timelist />
 </Layout>
