--- a/src/components/aboutme.astro
+++ b/src/components/aboutme.astro
@@ -34,7 +34,7 @@ import Touch from './touch.astro';
                     Let's build your digital future together.
                 </span>
                 <span class="text-primary text-3xl font-bold flex flex-row gap-3">
-                    <Touch />
+                    <Touch transition:name='getintouch' />
                 </span>
             </div>
         </div>
