--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -23,7 +23,7 @@ import Touch from './touch.astro';
                 Connect
             </h3>
             <span class="text-white text-3xl font-bold flex flex-row gap-3">
-                <Touch />
+                <Touch transition:name='getintouch' />
             </span>
             </div>
         </div>
