--- a/src/components/aboutme.astro
+++ b/src/components/aboutme.astro
@@ -2,7 +2,7 @@
 import { Image } from 'astro:assets'
 import { NAME } from '@consts/consts';
 import Me from '@assets/me.png';
-import Name from '@comps/name.jsx'
+import Name from '@comps/code.jsx'
 import Touch from './touch.astro';
 ---
 <section class='flex flex-col justify-center items-center relative py-24'>
