--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,5 +1,5 @@
 ---
-import Name from '@comps/name.jsx'
+import Name from '@comps/code.jsx'
 import { Image } from 'astro:assets'
 import { NAME } from '@consts/consts';
 import Me from '@assets/me.png';
