--- a/src/components/stack.astro
+++ b/src/components/stack.astro
@@ -1,7 +1,7 @@
 ---
 import List from '@comps/list.astro';
 ---
-<div class="pt-32 px-12">
+<div class="p-12 relative">
     <span class='-mb-12 inline-block text-md p-1 px-3 w-fit rounded-full text-white font-bold bg-gradient-to-t from-primary/80 to-secondary/80 border-2 border-secondary'>
         My Digital Arsenal
     </span>
