--- a/src/components/whatcard.astro
+++ b/src/components/whatcard.astro
@@ -3,14 +3,14 @@ import { Icon } from "astro-icon/components";
 const { number, iconname, title, description, dataAOS, DaDuration, trigger } = Astro.props;
 ---
 
-<div class='w-full py-6 grid gird-cols-1 md:grid-cols-9 mx-auto border-b-4 border-secondary bg-gradient-to-r from-primary to-secondary rounded-2xl px-8 gap-2 md:gap-8 hover:cursor-pointer' data-aos={dataAOS} data-aos-duration={DaDuration} data-aos-anchor={'#'+trigger}>
+<div class='relative w-full py-6 grid gird-cols-1 md:grid-cols-9 mx-auto border-b-4 border-secondary bg-gradient-to-r from-primary to-secondary rounded-2xl px-8 gap-2 md:gap-8 hover:cursor-pointer'  data-aos={dataAOS} data-aos-duration={DaDuration} data-aos-anchor={'#'+trigger}>
     <div class="relative text-start px-0 w-fit h-full col-span-1">
-        <h3 class='text-7xl font-bold tracking-tight text-white'>
+        <h3 class='text-5xl md:text-7xl font-bold tracking-tight text-white'>
             {number}
         </h3>
     </div>
     <div class="relative text-start px-0 w-fit h-full col-span-1">
-        <Icon name={iconname} class="w-16 mt-1 h-auto text-white" />
+        <Icon name={iconname} class="w-10 md:w-16 mt-1 h-auto text-white" />
     </div>
     <div class="relative text-start px-0 w-fit h-full col-span-7">
         <h3 class='text-xl font-semibold tracking-tight text-white'>
