--- a/src/components/whatido.astro
+++ b/src/components/whatido.astro
@@ -5,13 +5,13 @@ import car from '@assets/cat.png';
 import { Icon } from '@nodes/astro-icon/components';
 import Stack from './stack.astro';
 ---
-<section class="grid grid-cols-1 gap-5 md:gap-0 md:grid-cols-7 h-screen justify-start items-start px-6">
+<section class="w-full h-fit grid grid-cols-1 gap-5 md:gap-0 md:grid-cols-7 justify-start items-start px-6">
     <div class="col-span-2 flex flex-col justify-start items-start" data-aos="fade-right" data-aos-duration="1000">
         <span class='inline-block text-md p-1 px-3 w-fit rounded-full text-white font-bold bg-gradient-to-t from-primary/80 to-secondary/80 border-2 border-secondary'>
             Services
         </span>
         <h2 data-aos="fade-right" data-aos-duration="1100" class="font-outfit font-bold text-4xl md:text-5xl lg:text-6xl text-neutral mt-2">What I <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Do</span></h2>
-        <div class="flex flex-col self-center py-24" data-aos="fade-right" data-aos-duration="1200">
+        <div class="md:flex flex-col self-center pt-24 hidden" data-aos="fade-right" data-aos-duration="1200">
             <Image src={car} alt="Cat From Freepik" class="w-3/4" />
             <p class="text-primary capitalize mt-3 text-md font-bold flex flex-row justify-center items-center">I love cats btw<Icon name="heart" class="text-secondary w-6 h-auto" /></p>
         </div>
