--- a/src/components/whatido.astro
+++ b/src/components/whatido.astro
@@ -17,10 +17,10 @@ import Stack from './stack.astro';
         </div>
     </div>
     <div class="col-span-5 flex flex-col gap-3" id="ido">
-        <WhatCard trigger="ido" dataAOS="fade-left" DaDuration="1000" number="01" iconname="design" title="Web Design" description="Delivering cutting-edge, professional-grade designs that are visually appealing and functional." />
-        <WhatCard trigger="ido" dataAOS="fade-left" DaDuration="1300" number="02" iconname="dev" title="Web Development" description="Developing high-performance, scale websites with a focus on quality and precision." />
-        <WhatCard trigger="ido" dataAOS="fade-left" DaDuration="1500" number="03" iconname="lamp" title="LAMPP Server Management" description="Expert management and configuration of LAMPP servers to ensure optimal performance." />
-        <WhatCard trigger="ido" dataAOS="fade-left" DaDuration="1800" number="04" iconname="bug" title="Bug Fixes & Speed Optimization" description="Enhancing website performance through comprehensive bug fixes and speed optimization." />
+        <WhatCard trigger="ido" dataAOS="fade-up" DaDuration="1000" number="01" iconname="design" title="Web Design" description="Delivering cutting-edge, professional-grade designs that are visually appealing and functional." />
+        <WhatCard trigger="ido" dataAOS="fade-up" DaDuration="1300" number="02" iconname="dev" title="Web Development" description="Developing high-performance, scale websites with a focus on quality and precision." />
+        <WhatCard trigger="ido" dataAOS="fade-up" DaDuration="1500" number="03" iconname="lamp" title="LAMPP Server Management" description="Expert management and configuration of LAMPP servers to ensure optimal performance." />
+        <WhatCard trigger="ido" dataAOS="fade-up" DaDuration="1800" number="04" iconname="bug" title="Bug Fixes & Speed Optimization" description="Enhancing website performance through comprehensive bug fixes and speed optimization." />
     </div>
 </section>
 <div class="w-full">
