--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,13 @@
 import Layout from '@layouts/Layout.astro';
 import Hero from '@comps/hero.astro';
 import WhatIDo from '@comps/whatido.astro';
-import RecentProjects from '@/components/recentSection.astro';
+import RecentProjects from '@comps/recentSection.astro';
+import Testimonials from '@comps/testimonials.astro';
 ---
 
 <Layout>
 	<Hero />
     <WhatIDo />
     <RecentProjects />
+    <Testimonials />
 </Layout>
