--- a/src/pages/projects/[...page].astro
+++ b/src/pages/projects/[...page].astro
@@ -14,9 +14,10 @@ const { page }: any = Astro.props;
 ---
 
 <Layout>
-    <section class="flex flex-col w-[96%] h-fit pt-[120px] bg-base-100 mx-auto rounded-2xl p-12">
-        <h2 class="font-outfit font-bold text-4xl md:text-5xl lg:text-6xl text-neutral mt-2">My <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Projects</span></h2>
-        <p class="text-primary mt-2">This site is new, I am still adding projects to it. Plus I never kept a record of the projecs I worked on.. why? idk</p>
+    <div class="py-12"></div>
+    <section id="recent" class="flex flex-col w-[96%] h-fit bg-gray-300 mx-auto rounded-2xl p-12 shadow-[inset_2px_2px_70px] shadow-secondary/60 border-2 border-secondary">
+        <h2 transition:name="projectstitle" class="font-outfit font-bold text-4xl md:text-5xl lg:text-6xl text-neutral mt-2">My <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Projects</span></h2>
+        <p transition:name="projectsdes" class="text-primary mt-2">This site is new, I am still adding projects to it. Plus I never kept a record of the projecs I worked on.. why? idk</p>
         <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
             {page.data.sort((a: { data: { pubDate: string | number | Date; }; }, b: { data: { pubDate: string | number | Date; }; }) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()).map((p: any) => <RecentCard post={p}/>)}
         </div>
