--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,10 +3,14 @@ import Layout from '@layouts/Layout.astro';
 import AboutMe from '@/components/aboutme.astro';
 import WhatIDo from '@comps/whatido.astro';
 import Timelist from '@/components/timelist.astro';
+import Testimonials from '@comps/testimonials.astro';
+import Contact from '@comps/contact.astro';
 ---
 
 <Layout>
     <AboutMe />
     <WhatIDo />
     <Timelist />
+    <Testimonials />
+    <Contact />
 </Layout>
