--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from '@comps/hero.astro';
 import WhatIDo from '@comps/whatido.astro';
 import RecentProjects from '@comps/recentSection.astro';
 import Testimonials from '@comps/testimonials.astro';
+import Contact from '@comps/contact.astro';
 ---
 
 <Layout>
@@ -11,4 +12,5 @@ import Testimonials from '@comps/testimonials.astro';
     <WhatIDo />
     <RecentProjects />
     <Testimonials />
+    <Contact />
 </Layout>
