--- a/src/components/testimonials.astro
+++ b/src/components/testimonials.astro
@@ -8,7 +8,7 @@ import TestimonialCard from "./testimonialCard.astro";
         <h2 class="font-outfit font-bold text-4xl md:text-5xl lg:text-6xl text-neutral mt-2">Recent <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Testimonials</span></h2>
   
       <div class="mt-8 [column-fill:_balance] sm:columns-2 sm:gap-6 lg:columns-3 lg:gap-8">
-        {allTestimonials.map((r: any) => <TestimonialCard reviews={r}/>)}
+        {allTestimonials.sort(() => Math.random() - 0.5).slice(0, 3).map((r: any) => <TestimonialCard reviews={r} />)}
       </div>
     </div>
   </section>
