--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -1,12 +1,41 @@
 ---
-import { getCollection } from 'astro:content';
+import { getCollection, type CollectionEntry } from "astro:content";
+import { Image } from "astro:assets";
+
 export async function getStaticPaths() {
-  const blogEntries = await getCollection('projects');
-  return blogEntries.map((entry: any) => ({
-    params: { slug: entry.slug }, props: { entry },
+  const blog = await getCollection("projects");
+  return blog.map((entry) => ({
+    params: { slug: entry.slug },
+    props: { entry,  },
   }));
 }
-const { entry }: { entry: any } = Astro.props;
-const { Content } = await entry.render();
+
+type Props = {
+  entry: CollectionEntry<"projects">;
+};
+
+const { entry } = Astro.props;
+const { Content, headings } = await entry.render();
+
+import Layout from '@layouts/MarkdownLayout.astro';
+import Toc from '@comps/toc.astro';
 ---
-<Content />
+
+<Layout frontmatter={entry.data}>
+  <div class="col-span-6 h-fit border-2 border-primary rounded-lg mb-12">
+    <div class="w-full bg-cover bg-no-repeat relative">
+      <Image src={entry.data.image} alt={entry.data.title} class="w-full h-full rounded-xl object-cover" />
+      <span class="w-full h-1/4 absolute bottom-0 flex justify-center items-center bg-gradient-to-r from-primary/80 to-secondary/80 backdrop-blur-[2px]">
+        <h1 class="text-3xl font-bold text-white">{entry.data.title}</h1>
+      </span>
+    </div>
+    <article class="w-full px-6 py-6 prose-lg prose-headings:font-bold prose-headings:my-3 prose-headings:text-primary prose-p:text-gray-700 prose-img:rounded-xl">
+      <Toc headings={headings} />
+      <hr class="border-0.5 border-primary" />
+      <Content />
+    </article>
+  </div>
+  <div class="col-span-2 h-fit border-2 border-primary rounded-lg">
+
+  </div>
+</Layout>
