--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -23,7 +23,7 @@ import Touch from "./touch.astro"
   
               <div>
                 <label class="sr-only" for="phone">Phone</label>
-                <input class="w-full rounded-lg border-secondary border-2 p-3 text-sm ring-0 hover:ring-0 outline-0 hover:outline-0 hover:shadow-lg focus:shadow-lg bg-white/80" placeholder="Phone Number" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" />
+                <input class="w-full rounded-lg border-secondary border-2 p-3 text-sm ring-0 hover:ring-0 outline-0 hover:outline-0 hover:shadow-lg focus:shadow-lg bg-white/80" placeholder="Phone Number" type="tel" name="phone" pattern="\+?[0-9\s()-]{7,15}" />
               </div>
             </div>
   
