--- a/src/components/recentCardBlog.astro
+++ b/src/components/recentCardBlog.astro
@@ -9,7 +9,8 @@ const month = date.toLocaleString('en-US', { month: 'short' });
 const day = date.getDate();
 const formattedDate = `${day} ${month}`;
 ---
-<a href={`/projects/${post.slug}/`} class="group bg-gradient-to-t from-primary to-secondary hover:from-primary/90 hover:to-secondary relative rounded-2xl border" data-aos="fade-up" data-aos-duration="1000" transition:name={title}>
+
+<a href={`/blog/${post.slug}/`} class="group bg-gradient-to-t from-primary to-secondary hover:from-primary/90 hover:to-secondary relative rounded-2xl border" data-aos="fade-up" data-aos-duration="1000" transition:name={title}>
   <div class='relative p-2 text-white'>
     <div class='p-2'>
       <Image loading="lazy" src={image} alt={imagealt} class="rounded-2xl "/>
