--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -15,10 +15,14 @@ type Props = {
 };
 
 const { entry } = Astro.props;
-const { Content, headings } = await entry.render();
+const { Content } = await entry.render();
 
 import Layout from '@layouts/MarkdownLayout.astro';
-import Toc from '@comps/toc.astro';
+import RecentCard from '@comps/sidebar/recentCardBlog.astro';
+import RecentProjects from '@comps/sidebar/recentCard.astro';
+
+const allPosts = await getCollection("blog");
+const allProjects = await getCollection("projects");
 ---
 
 <Layout frontmatter={entry.data}>
@@ -30,12 +34,22 @@ import Toc from '@comps/toc.astro';
       </span>
     </div>
     <article class="w-full px-6 py-6 prose-lg prose-headings:font-bold prose-headings:my-3 prose-headings:text-primary prose-p:text-gray-700 prose-img:rounded-xl">
-      <Toc headings={headings} />
-      <hr class="border-0.5 border-primary" />
+      <hr class="border-0.5 my-3 pb-3 border-primary" />
       <Content />
     </article>
   </div>
-  <div class="col-span-2 h-fit border-2 border-primary rounded-lg">
-
-  </div>
+  <div class="col-span-2 h-fit border-2 border-primary rounded-lg bg-white/40 backdrop-blur-[2px] shadow-md z-10">
+    <div class="py-3 px-2">
+      <h4>
+        <span class="text-2xl font-bold text-primary">Recent Posts</span>
+      </h4>
+      {allPosts.sort((a: { data: { pubDate: string | number | Date; }; }, b: { data: { pubDate: string | number | Date; }; }) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()).map((p: any) => <RecentCard post={p}/>)}    
+    </div>
+    <div class="py-3 px-2">
+      <h4>
+        <span class="text-2xl font-bold text-primary">Recent Projects</span>
+      </h4>
+      {allProjects.sort((a: { data: { pubDate: string | number | Date; }; }, b: { data: { pubDate: string | number | Date; }; }) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()).map((p: any) => <RecentProjects post={p}/>)}    
+    </div>
+</div>
 </Layout>
