only three posts

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -39,13 +39,14 @@ const allProjects = await getCollection("projects");
         <h4>
           <span class="text-2xl font-bold text-primary">Recent Posts</span>
         </h4>
-        {allPosts.sort((a: { data: { pubDate: string | number | Date; }; }, b: { data: { pubDate: string | number | Date; }; }) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()).map((p: any) => <RecentCard post={p}/>)}    
+        {allPosts.sort((a: { data: { pubDate: string | number | Date; }; }, b: { data: { pubDate: string | number | Date; }; }) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()).slice(0, 3).map((p: any) => <RecentCard post={p}/>)}
+        
       </div>
       <div class="py-3 px-2">
         <h4>
           <span class="text-2xl font-bold text-primary">Recent Projects</span>
         </h4>
-        {allProjects.sort((a: { data: { pubDate: string | number | Date; }; }, b: { data: { pubDate: string | number | Date; }; }) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()).map((p: any) => <RecentProjects post={p}/>)}    
+        {allProjects.sort((a: { data: { pubDate: string | number | Date; }; }, b: { data: { pubDate: string | number | Date; }; }) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()).slice(0, 3).map((p: any) => <RecentProjects post={p}/>)}
       </div>
   </div>
 </Layout>
