--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -1,18 +1,12 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
-const { sitetitle } = Astro.props;
 import 'aos/dist/aos.css';
 ---
 <head>    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <meta name=description content={Astro.generator} />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <slot />
-    <title>
-        {sitetitle}
-    </title>
 </head>
 <ViewTransitions />
 
