--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -20,11 +20,11 @@ console.log();
 			colorScheme="light"
   			robots="index, follow"
 			  facebook={{
-				image: frontmatter.image,
+				image: frontmatter.image.src,
 				type: "article",
 			  }}
 			  twitter={{
-				image: frontmatter.image,
+				image: frontmatter.image.src,
 				site: "@iEscapedVim",
 				card: "summary",
 			  }}
